src/components/city/city.scss
.city {
    display: grid;
    grid-template-rows: repeat(10,2em);
    max-height: 20em;
    background-size: cover;
}

.cards {
    display: grid;
    justify-items: center;
    grid-auto-flow: column;
    column-gap: 4%;
    grid-template-columns: 30% 30% 30%;
    grid-template-rows: 5.5em repeat(5, 3.5em) 0em;
    padding:0.5em;
    padding-bottom: 0;
}

.card {
    &_Deal1 {
        grid-row: 2/3;
    }  
    &_Deal2 {
        grid-row: 3/4;
    }
    &_Deal3 {
        grid-row: 4/5;
    }
    &_2 {
        grid-row: 5/6;
    }  
    &_3 {
        grid-row: 2/3;
    }  
    &_4{
        grid-row: 3/4;
    }
    &_5 {
        grid-row: 4/5;
    }
    &_6 {
        grid-row: 5/6;
    }  
    &_7 {
        grid-row: 2/3;
    }  
    &_8{
        grid-row: 3/4;
    }
    &_9 {
        grid-row: 4/5;
    }
    &_10 {
        grid-row: 5/6;
    }
}

.total {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    padding: 2em;
    padding-bottom: 1em;
    z-index: 2;
    width: 100%;
    height: 100%;
    grid-row: 8/9;

    &_value {
        height: 100%;
        display: flex;
        justify-content: center;
        align-content: center;
        flex-direction: column;
    }
}

.city_yellow {
    background-image: url('../../images/yellow_background.jpg') ;
}
.city_red {
    background-image: url('../../images/red_background.jpg');
}
.city_white {
    background-image: url('../../images/white_background.jpg');
}
.city_blue {
    background-image: url('../../images/blue_background.jpg');
}
.city_green{
    background-image: url('../../images/green_background.jpg');
}
.city_purple {
    background-image: url('../../images/purple_background.jpg');
}

.total_yellow {
    background-color: rgba(255, 244, 191, 0.9) ;
}
.total_blue {
    background-color: rgba(153, 245, 255, 0.9) ;
}
.total_green {
    background-color: rgba(177, 245, 153, 0.9) ;
}
.total_red {
    background-color: rgba(222, 131, 115, 0.9) ;
}
.total_white {
    background-color: rgba(245, 245, 245, 0.9) ;
}
.total_purple{
    background-color: rgba(176, 170, 242, 0.9) ;
}

